# extract_comment

./: Cargo.toml
src/: main.rs
