[package]
name = "extract_comment"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
walkdir = "2.3"
flate2 = "1.0"
tar     = "0.4"
anyhow = "1.0"